--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 <h1>Hello</h1>
+  <script> 
+    jQuery(function(){
+      jQuery("#includedContent").load("https://api.github.com/"); 
+    });
+    </script> 
