--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <h1>Hello</h1>
+<div class"rest-test">
   <script> 
     jQuery(function(){
       jQuery("#includedContent").load("https://api.github.com/"); 
     });
     </script> 
+</div>
