--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Hello</h1>
-<div class"rest-test">
+<div id="rest-test">
   <script> 
-      jQuery("#includedContent").load("https://api.github.com/"); 
+      jQuery("#rest-test").load("https://api.github.com/"); 
     </script> 
 </div>
