--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Hello</h1>
 <div id="rest-test">
   <script> 
-      jQuery("#rest-test").load("https://api.github.com/"); 
+      jQuery(".portfolio-page").load("https://api.github.com/"); 
     </script> 
 </div>
