--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <h1>Hello</h1>
 <div id="rest-test">
   <script> 
-      jQuery(".portfolio-page").load("https://api.github.com/"); 
+      jQuery(function(){
+      jQuery("#rest-test").load("https://raw.githubusercontent.com/ensiomarjamaa/portfoliorep/main/index.html"); 
+    });
     </script> 
 </div>
