--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <h1>Hello</h1>
 <div id="rest-test">
-
+  <script> 
+      jQuery(function(){
+      jQuery("#rest-test").load("https://api.github.com/"); 
+    });
+    </script> 
 </div>
