--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <div id="rest-test">
   <script> 
       jQuery(function(){
-      jQuery("#rest-test").load("https://api.github.com/"); 
+      jQuery("#rest-test").load("https://api.github.com/emojis"); 
     });
     </script> 
 </div>
